syntax = "proto3";
// proto package
package services;

// golang package
option go_package="./services";

service Calculator {
    rpc Hello(HelloRequest) returns (HelloResponse);
    rpc Fibonacci(FibonacciRequest) returns (stream FibonacciResponse);
    rpc Average(stream AverageRequest) returns ( AverageResponse);
    rpc Sum(stream SumRequest) returns ( stream SumResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string result = 1;
}


message FibonacciRequest {
    uint32 n = 1;
}

message FibonacciResponse {
    uint32 result = 1;
}


message AverageRequest {
    double num = 1;
}

message AverageResponse {
    double result = 1;
}

message SumRequest {
    int32 num = 1;
}

message SumResponse {
    int32 result = 1;
}